--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/* @import url(https://fonts.googleapis.com/css?family=VT323); */
-
 @keyframes scroll {
 	0% { height: 0 }
 	100% { height: 100%; }
@@ -92,11 +90,7 @@ p {
 	margin: 0; 
 }
 	
-span { animation: blink 1s infinite }
-
-ul {
-	list-style: none;
-}
+span { animation: blink 2s infinite }
 
 ul a:before,
 p a:before {
@@ -119,7 +113,7 @@ nav.site {
 	margin: 0 0 40px 250px;
   position: relative;
   width: 100%;
-  z-index: 10;
+  z-index: 1;
 }
 
 nav.site ul {
@@ -180,7 +174,7 @@ nav.site ul li {
 }
 
 .wrapper {
-  animation: scroll 5s 1;
+  animation: scroll 4s 1;
   margin: 0;
   overflow: hidden;
   padding: 0;
@@ -218,8 +212,7 @@ nav.site ul li {
 .left ul {
   position: fixed;
   display: block;
-  background-color: #383838;
-  padding: 0px;
+  background-color: transparent;
 }
 
 .left ul li {
@@ -297,9 +290,9 @@ a.reboot:hover {
 	
 .scanline {
 	animation: scroll 10s 5s infinite;
-	background: -moz-linear-gradient(top,  #00dd0000 0%, #00dd00 50%, #00dd0000 100%);
-	background: -webkit-linear-gradient(top,  #00dd0000 0%,#00dd00 50%,#00dd0000 100%);
-	background: linear-gradient(to bottom,  #00dd0000 0%,#00dd00 50%,#00dd0000 100%);
+	background: -moz-linear-gradient(top,  #00dd0000 0%, #00dd00 80%, #00dd0000 100%);
+	background: -webkit-linear-gradient(top,  #00dd0000 0%,#00dd00 80%,#00dd0000 100%);
+	background: linear-gradient(to bottom,  #00dd0000 0%,#00dd00 80%,#00dd0000 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0000dd00', endColorstr='#0000dd00',GradientType=0 );
 	display: block;
 	height: 20px;
@@ -308,7 +301,7 @@ a.reboot:hover {
 		left: 0;
 		right: 0;
 		top: -5%;
-	z-index: 2;
+	z-index: 0;
 }
 
 .clear {
@@ -319,5 +312,3 @@ a.reboot:hover {
   overflow: auto;
   zoom: 1;
 }
-
-/* .upper { text-transform: uppercase; } */
